test/arrays/swap/rankMismatchError.good
rankMismatchError.chpl:12: error: rank mismatch in array swap
